--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/lanle98/Lan_Le_HVBDS_Test#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "crypto": "^1.0.1",
+    "crypto-js": "^4.0.0",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.3"
